# project-euler

./: CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt
src/euler/: CMakeLists.txt
src/euler/include/euler/: 0001.hpp  0002.hpp  0003.hpp  0007.hpp  0010.hpp  0025.hpp  0035.hpp  0885.hpp
src/euler/src/: 0001.cpp  0002.cpp  0003.cpp  0007.cpp  0010.cpp  0025.cpp  0035.cpp  0885.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: algorithm.hpp  digits.hpp  fibonacci.hpp  functional.hpp  primes.hpp
src/utils/src/: digits.cpp  fibonacci.cpp  primes.cpp
tests/: 0001_tests.cpp  0002_tests.cpp  0003_tests.cpp  0007_tests.cpp  0010_tests.cpp  0025_tests.cpp  0035_tests.cpp  0885_tests.cpp  CMakeLists.txt  utils_tests.cpp
